@@ -1,4 +1,7 @@
 
+2009-04-13 21:49 Ali aliov@xfce.org 
+	 * : Register to some posix signals+put the restart style to never when we exit the power manager
+
 2009-04-13 21:23 Ali aliov@xfce.org 
 	 * : Fix icon refreshing, it should fix bug 5221
 
